--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,131 +1,154 @@
 <div class="row">
-  <div class="col-12 col-lg-10 col-xl-9">
-    <div class="btn-group d-flex flex-wrap">
-      <button (click)="onSelectChanged($event)" value="id" class="btn btn-info filter-selector">ID</button>
-      <button (click)="onSelectChanged($event)" value="name" class="btn btn-info active filter-selector">Name</button>
-      <button (click)="onSelectChanged($event)" value="catId" class="btn btn-info filter-selector">CatId</button>
-      <button (click)="onSelectChanged($event)" value="type" class="btn btn-info filter-selector">Type</button>
-      <button (click)="onSelectChanged($event)" value="description" class="btn btn-info filter-selector">Desc</button>
-      <button (click)="onSelectChanged($event)" value="price" class="btn btn-info filter-selector">Price &lt;=</button>
-      <button (click)="onFlagSelect($event)" value="featured" class="btn btn-info filter-selector">Feat
-        <input class="align-text-top flag-filter" disabled type="checkbox">
-      </button>
-      <button (click)="onFlagSelect($event)" value="active" class="btn btn-info filter-selector">Active
-        <input class="align-text-top flag-filter" disabled type="checkbox">
-      </button>
-    </div>
-  </div>
-  <div class="col-12 col-md-8 col-lg-6 col-xl-3 mt-2">
-    <div class="input-group no-border">
-      <input #searchInput id="searchInput" type="text" value="" class="form-control mr-sm-2 my-1"
-        placeholder="Search..." (keyup)="onSearch(searchInput.value)" (search)="onSearch(searchInput.value)"
-        [disabled]=isFlagFilter>
-      <button type="submit" (click)="onSearch(searchInput.value)"
-        class="btn btn-white btn-round btn-just-icon btn-search" [disabled]=isFlagFilter>
-        <i class="material-icons">search</i>
-        <div class="ripple-container"></div>
-      </button>
-    </div>
-  </div>
-  <div class="col-12 mb-2">
-    <p class="mb-0"><em>Select number of products on the page</em></p>
-    <div class="btn-group d-flex flex-wrap">
-      <button (click)="setPageSize($event)" value="10" class="btn btn-light page-size">10</button>
-      <button (click)="setPageSize($event)" value="20" class="btn btn-light page-size">20</button>
-      <button (click)="setPageSize($event)" value="50" class="btn btn-light active page-size">50</button>
-      <button (click)="setPageSize($event)" value="100" class="btn btn-light page-size">100</button>
-      <button (click)="setPageSize($event)" value="200" class="btn btn-light page-size">200</button>
-      <button (click)="setPageSize($event)" value="-1" class="btn btn-light page-size">All</button>
-    </div>
-  </div>
   <div class="col-12">
-    <button class="btn btn-primary w-100" [routerLink]="'0'">Create Product</button>
-    <div class="table-responsive">
-      <table class="table table-striped table-sm table-product">
-        <thead class="thead-dark text-center">
-          <tr>
-            <th (click)="onColumnSelect('id')" class="table-product__th--id">Id
-              <i *ngIf="sortColumn !== 'id'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'id' && !sortDesc" class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'id' && sortDesc" class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('name')" class="table-product__th--name">Name
-              <i *ngIf="sortColumn !== 'name'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'name' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'name' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('catId')" class="table-product__th--catId">CatId
-              <i *ngIf="sortColumn !== 'catId'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'catId' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'catId' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('type')" class="table-product__th--type">Type
-              <i *ngIf="sortColumn !== 'type'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'type' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'type' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('description')" class="table-product__th--desc">Description
-              <i *ngIf="sortColumn !== 'description'"
-                class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'description' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'description' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('price')" class="table-product__th--price">Price
-              <i *ngIf="sortColumn !== 'price'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'price' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'price' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('featured')" class="table-product__th--feat">Featured
-              <i *ngIf="sortColumn !== 'featured'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'featured' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'featured' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th (click)="onColumnSelect('active')" class="table-product__th--active">Active
-              <i *ngIf="sortColumn !== 'active'" class="material-icons align-text-bottom">indeterminate_check_box</i>
-              <i *ngIf="sortColumn === 'active' && !sortDesc"
-                class="material-icons align-text-top">keyboard_arrow_down</i>
-              <i *ngIf="sortColumn === 'active' && sortDesc"
-                class="material-icons align-text-bottom">keyboard_arrow_up</i>
-            </th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let product of products | async">
-            <td>{{ product.id }}</td>
-            <td>{{ product.name }}</td>
-            <td class="text-center">{{ product.catId }} ({{ categories.get(product.catId) }})</td>
-            <td class="text-center">{{ product.type }}</td>
-            <td>{{ product.description }}</td>
-            <td class="text-right">{{ product.price }}</td>
-            <td class="text-right">{{ product.featured }}</td>
-            <td class="text-right">{{ product.active }}</td>
-            <td>
-              <div class="btn-group">
-                <button class="btn btn-info" [routerLink]="[product.id]">
-                  <i class="material-icons">edit</i>
-                </button>
-                <button class="btn btn-danger pull-right" (click)="onConfirmDelete(product.id)">
-                  <i class="material-icons">delete</i>
-                </button>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="card">
+      <div class="card-header card-header-primary d-flex justify-content-between">
+        <div>
+          <h3 class="card-title">Products</h3>
+          <p class="card-category">List of Products</p>
+        </div>
+      </div>
+      <div class="row card-body">
+        <div class="col-12 col-lg-10 col-xl-9 d-flex flex-wrap">
+          <div class="btn-group d-flex flex-wrap">
+            <button (click)="onSelectChanged($event)" value="id" class="btn btn-info filter-selector">ID</button>
+            <button (click)="onSelectChanged($event)" value="name"
+              class="btn btn-info active filter-selector">Name</button>
+            <button (click)="onSelectChanged($event)" value="catId" class="btn btn-info filter-selector">CatId</button>
+            <button (click)="onSelectChanged($event)" value="type" class="btn btn-info filter-selector">Type</button>
+            <button (click)="onSelectChanged($event)" value="description"
+              class="btn btn-info filter-selector">Desc</button>
+            <button (click)="onSelectChanged($event)" value="price" class="btn btn-info filter-selector">Price
+              &lt;=</button>
+            <button (click)="onFlagSelect($event)" value="featured" class="btn btn-info filter-selector">Feat
+              <input class="align-text-top flag-filter" disabled type="checkbox">
+            </button>
+            <button (click)="onFlagSelect($event)" value="active" class="btn btn-info filter-selector">Active
+              <input class="align-text-top flag-filter" disabled type="checkbox">
+            </button>
+          </div>
+        </div>
+        <div class="col-12 col-md-8 col-lg-6 col-xl-3 mt-2">
+          <div class="input-group no-border">
+            <input #searchInput id="searchInput" type="text" value="" class="form-control mr-sm-2 my-1"
+              placeholder="Search..." (keyup)="onSearch(searchInput.value)" (search)="onSearch(searchInput.value)"
+              [disabled]=isFlagFilter>
+            <button type="submit" (click)="onSearch(searchInput.value)"
+              class="btn btn-white btn-round btn-just-icon btn-search" [disabled]=isFlagFilter>
+              <i class="material-icons">search</i>
+              <div class="ripple-container"></div>
+            </button>
+          </div>
+        </div>
+        <div class="col-12 mb-2">
+          <p class="mb-0"><em>Select number of products on the page</em></p>
+          <div class="btn-group d-flex flex-wrap">
+            <button (click)="setPageSize($event)" value="10" class="btn btn-light page-size">10</button>
+            <button (click)="setPageSize($event)" value="20" class="btn btn-light page-size">20</button>
+            <button (click)="setPageSize($event)" value="50" class="btn btn-light active page-size">50</button>
+            <button (click)="setPageSize($event)" value="100" class="btn btn-light page-size">100</button>
+            <button (click)="setPageSize($event)" value="200" class="btn btn-light page-size">200</button>
+            <button (click)="setPageSize($event)" value="-1" class="btn btn-light page-size">All</button>
+          </div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-success w-100" [routerLink]="'0'">Add New Product
+            <i class="material-icons align-text-center pl-3">add_shopping_cart</i>
+          </button>
+          <div class="table-responsive">
+            <table class="table table-striped table-sm table-product">
+              <thead class="thead-dark text-center">
+                <tr>
+                  <th (click)="onColumnSelect('id')" class="table-product__th--id">Id
+                    <i *ngIf="sortColumn !== 'id'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'id' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'id' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('name')" class="table-product__th--name">Name
+                    <i *ngIf="sortColumn !== 'name'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'name' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'name' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('catId')" class="table-product__th--catId">CatId
+                    <i *ngIf="sortColumn !== 'catId'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'catId' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'catId' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('type')" class="table-product__th--type">Type
+                    <i *ngIf="sortColumn !== 'type'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'type' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'type' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('description')" class="table-product__th--desc">Description
+                    <i *ngIf="sortColumn !== 'description'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'description' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'description' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('price')" class="table-product__th--price">Price
+                    <i *ngIf="sortColumn !== 'price'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'price' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'price' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('featured')" class="table-product__th--feat">Featured
+                    <i *ngIf="sortColumn !== 'featured'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'featured' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'featured' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th (click)="onColumnSelect('active')" class="table-product__th--active">Active
+                    <i *ngIf="sortColumn !== 'active'"
+                      class="material-icons align-text-bottom">indeterminate_check_box</i>
+                    <i *ngIf="sortColumn === 'active' && !sortDesc"
+                      class="material-icons align-text-top">keyboard_arrow_down</i>
+                    <i *ngIf="sortColumn === 'active' && sortDesc"
+                      class="material-icons align-text-bottom">keyboard_arrow_up</i>
+                  </th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let product of products | async">
+                  <td>{{ product.id }}</td>
+                  <td>{{ product.name }}</td>
+                  <td class="text-center">{{ product.catId }} ({{ categories.get(product.catId) }})</td>
+                  <td class="text-center">{{ product.type }}</td>
+                  <td>{{ product.description }}</td>
+                  <td class="text-right">{{ product.price }}</td>
+                  <td class="text-right">{{ product.featured }}</td>
+                  <td class="text-right">{{ product.active }}</td>
+                  <td>
+                    <div class="btn-group">
+                      <button class="btn btn-info" [routerLink]="[product.id]">
+                        <i class="material-icons">edit</i>
+                      </button>
+                      <button class="btn btn-danger pull-right" (click)="onConfirmDelete(product.id)">
+                        <i class="material-icons">delete</i>
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-<app-confirm-dialog></app-confirm-dialog>
+    <app-confirm-dialog></app-confirm-dialog>
